# r-trace

./: Cargo.toml  test-scene.cts
src/: color.rs  main.rs
src/geometry/: mod.rs  vec3.rs  world.rs
