[package]
name = "r-trace"
author = "Emmy Emmycelium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
clap = { version = "4.2.1", features = [ "derive" ] }
indicatif = "0.17.3"
png = "0.17.8"
rand = "0.8.5"
